# libwallaby

./: .gitignore  CMakeLists.txt  README.md  bob.yml  configs.tar  configure  install  libwallaby.1  temp.cpp
binding/: CMakeLists.txt  kipr.i
binding/python/: CMakeLists.txt  setup.cfg.in
binding/xml/: CMakeLists.txt
dbus/: CMakeLists.txt  org.freedesktop.NetworkManager.AccessPoint.xml  org.freedesktop.NetworkManager.Connection.Active.xml  org.freedesktop.NetworkManager.Device.Wireless.xml  org.freedesktop.NetworkManager.Device.xml  org.freedesktop.NetworkManager.IP4Config.xml  org.freedesktop.NetworkManager.Settings.Connection.xml  org.freedesktop.NetworkManager.Settings.xml  org.freedesktop.NetworkManager.xml
documentation/: CMakeLists.txt
documentation/html/: accel_8h.html  accel_8h.js  accel_8h_source.html  accel_8hpp.html  accel_8hpp_source.html  analog_8h.html  analog_8h_source.html  analog_8hpp.html  analog_8hpp_source.html  annotated.html  annotated_dup.js  audio_8h.html  audio_8h.js  audio_8h_source.html  battery_8h.html  battery_8h_source.html  battery_8hpp.html  battery_8hpp_source.html  botball_8h.html  botball_8h.js  botball_8h_source.html  button_8h.html  button_8h.js  button_8h_source.html  button_8hpp.html  button_8hpp.js  button_8hpp_source.html  button__ids_8hpp.html  button__ids_8hpp.js  button__ids_8hpp_source.html  camera_8h.html  camera_8h.js  camera_8h_source.html  camera_8hpp.html  camera_8hpp.js  camera_8hpp_source.html  classAddress-members.html  classAddress.html  classAddress.js  classSocket-members.html  (+707 more)
documentation/html/search/: all_0.js  all_1.js  all_10.js  all_11.js  all_12.js  all_13.js  all_14.js  all_15.js  all_16.js  all_17.js  all_18.js  all_19.js  all_1a.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_0.js  classes_1.js  classes_10.js  classes_11.js  classes_12.js  classes_2.js  classes_3.js  classes_4.js  classes_5.js  classes_6.js  classes_7.js  classes_8.js  classes_9.js  (+137 more)
documentation/man/man3/: Address.3  Hsv.3  Rgb.3  Socket.3  _home_zachary_libwallaby_module_.3  _home_zachary_libwallaby_module_accel_.3  _home_zachary_libwallaby_module_accel_public_.3  _home_zachary_libwallaby_module_accel_public_kipr_.3  _home_zachary_libwallaby_module_accel_public_kipr_accel_.3  _home_zachary_libwallaby_module_analog_.3  _home_zachary_libwallaby_module_analog_public_.3  _home_zachary_libwallaby_module_analog_public_kipr_.3  _home_zachary_libwallaby_module_analog_public_kipr_analog_.3  _home_zachary_libwallaby_module_audio_.3  _home_zachary_libwallaby_module_audio_public_.3  _home_zachary_libwallaby_module_audio_public_kipr_.3  _home_zachary_libwallaby_module_audio_public_kipr_audio_.3  _home_zachary_libwallaby_module_battery_.3  _home_zachary_libwallaby_module_battery_public_.3  _home_zachary_libwallaby_module_battery_public_kipr_.3  _home_zachary_libwallaby_module_battery_public_kipr_battery_.3  _home_zachary_libwallaby_module_botball_.3  _home_zachary_libwallaby_module_botball_public_.3  _home_zachary_libwallaby_module_botball_public_kipr_.3  _home_zachary_libwallaby_module_botball_public_kipr_botball_.3  _home_zachary_libwallaby_module_button_.3  _home_zachary_libwallaby_module_button_public_.3  _home_zachary_libwallaby_module_button_public_kipr_.3  _home_zachary_libwallaby_module_button_public_kipr_button_.3  _home_zachary_libwallaby_module_camera_.3  _home_zachary_libwallaby_module_camera_public_.3  _home_zachary_libwallaby_module_camera_public_kipr_.3  _home_zachary_libwallaby_module_camera_public_kipr_camera_.3  _home_zachary_libwallaby_module_color_.3  _home_zachary_libwallaby_module_color_public_.3  _home_zachary_libwallaby_module_color_public_kipr_.3  _home_zachary_libwallaby_module_color_public_kipr_color_.3  _home_zachary_libwallaby_module_compass_.3  _home_zachary_libwallaby_module_compass_public_.3  _home_zachary_libwallaby_module_compass_public_kipr_.3  (+231 more)
documentation/pages/: mainpage.h  tutorials_page.h
module/: CMakeLists.txt  readme.md
module/accel/: CMakeLists.txt  binding.i
module/accel/src/: accel.cpp  accel_c.cpp  accel_p.cpp  accel_p.hpp
module/accel/test/: main.c
module/analog/: CMakeLists.txt  binding.i
module/analog/src/: analog.cpp  analog_c.cpp  analog_p.cpp  analog_p.hpp
module/analog/test/: CMakeLists.txt  main.c
module/aruco/: binding.i
module/audio/: CMakeLists.txt  audio.i  binding.i
module/audio/src/: audio.cpp
module/audio/test/: CMakeLists.txt  audio_test.c  main.c
module/battery/: CMakeLists.txt  binding.i
module/battery/src/: battery.cpp  battery_c.cpp  battery_p.cpp  battery_p.hpp
module/botball/: CMakeLists.txt  binding.i
module/botball/src/: botball_c.cpp
module/button/: CMakeLists.txt  binding.i
module/button/src/: button.cpp  button_c.cpp  button_p.cpp  button_p.hpp
module/button/test/: main.c
module/camera/: CMakeLists.txt  binding.i
module/camera/dependencies/: CMakeLists.txt
module/color/: CMakeLists.txt
module/compass/: CMakeLists.txt  binding.i
module/compat/: CMakeLists.txt
module/config/: CMakeLists.txt
module/console/: CMakeLists.txt  binding.i
module/core/: CMakeLists.txt  binding.i
module/create/: CMakeLists.txt  binding.i
module/create3/: CMakeLists.txt
module/digital/: CMakeLists.txt  binding.i
module/export/: CMakeLists.txt
module/geometry/: CMakeLists.txt  binding.i  geom.h  geom.hpp
module/graphics/: CMakeLists.txt  binding.i
module/gyro/: CMakeLists.txt  binding.i  gyro.hpp  gyro_c.cpp  gyro_p.cpp
module/log/: CMakeLists.txt
module/magneto/: CMakeLists.txt  binding.i
module/motor/: CMakeLists.txt  binding.i  get_pid_gains_test.c  motor_mav_test.c  motor_mrp_test.c  motor_mtp_test.c  motor_pwm_test.c
module/network/: CMakeLists.txt
module/sensor/: CMakeLists.txt
module/servo/: CMakeLists.txt  binding.i
module/tello/: CMakeLists.txt  binding.i  tello_botui_test.c
module/thread/: CMakeLists.txt
module/time/: CMakeLists.txt  binding.i  time_p.cpp
module/wait_for/: CMakeLists.txt  binding.i
(+1434 files in other folders)
