option(with_create "Enable Create API" ON)

if(with_create)
  add_module(create compat core button battery)

  if (EMSCRIPTEN)
    if (wasm)
      add_definitions(-DCREATE_EMSCRIPTEN_FS)
      message(INFO "Using Emscripten FS")
    else()
      add_definitions(-DCREATE_EMSCRIPTEN_JS)
      message(INFO "Using Emscripten JS")
    endif()
  elseif(DUMMY)
    add_definitions(-DCREATE_DUMMY)
  else()
    add_definitions(-DCREATE_WOMBAT)
  endif()
endif()